--- a/style.css
+++ b/style.css
@@ -32,6 +32,8 @@ body
     color: var(--text-color);
 }
 
+/* Navbar */
+
 .header
 {
     position: fixed;
@@ -90,6 +92,8 @@ body
     display: none;
     cursor: pointer;
 }
+
+/* Home Section */
 
 section
 {
@@ -287,7 +291,7 @@ span
 
     21%,
     40%{
-        content: "Web Designer.";
+        content: "Web Developer.";
     }
     41%,
     60%{
@@ -295,11 +299,11 @@ span
     }
     61%,
     80%{
-        content: "Web Developer.";
+        content: "Laravel Developer.";
     }
     81%,
     100%{
-        content: "Bootstrap Expert.";
+        content: "PHP Developer.";
     }
 }
 
@@ -328,6 +332,8 @@ span
         width: calc(100% + 8px);
     }
 }
+
+/* Education Section */
 
 .heading
 {
@@ -441,6 +447,15 @@ span
     line-height: 22px;
 }
 
+.heading2
+{
+    margin-top: 60px;
+    font-size: 3rem;
+    text-align: center;
+}
+
+/* Scrollbar Design */
+
 ::-webkit-scrollbar
 {
     width: 15px;
@@ -457,12 +472,7 @@ span
     width: 50px;
 }
 
-.heading2
-{
-    margin-top: 60px;
-    font-size: 3rem;
-    text-align: center;
-}
+/* Services Section */
 
 .services
 {
@@ -521,6 +531,8 @@ span
     font-weight: 800;
     line-height: 1.2;
 }
+
+/* Projects Section */
 
 .testimonials
 {
@@ -608,6 +620,8 @@ span
     border: 3px solid var(--main-color);
 }
 
+/* Contact Section */
+
 .contact
 {
     background-color: var(--bg-color);
@@ -682,6 +696,8 @@ span
 {
     margin-top: 2rem;
 }
+
+/* Footer */
 
 .footer
 {
